--- a/Views/Admin/ApprovedVendor.cshtml
+++ b/Views/Admin/ApprovedVendor.cshtml
@@ -53,7 +53,7 @@
 							</div>
 						</div>
 						<div class="box-body">
-							<table id="tblApVendor" class="table table-bordered display nowrap">
+							<table id="tblApVendor" class="table table-bordered display">
 								<thead>
 									<tr>
 										<th>SNo.</th>
