--- a/Views/Admin/VendorProfile.cshtml
+++ b/Views/Admin/VendorProfile.cshtml
@@ -431,14 +431,19 @@
                                 <div class="col-md-12">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 b-t-1">
                                         <div class="form-group">
-                                            <label for="inputName" class="col-sm-6 control-label text-left l-h p-b-16">Cancel Checque Image</label>
+                                            <label for="inputName" class="col-sm-6 control-label text-left l-h p-b-16">Cancel Cheque Image</label>
                                             <img class="img-responsive" src="~/Content/upload/vendor/doc/@Model.VendorBankModels.CanChqImage" height="150" width="300" />
                                         </div>
                                     </div>
+                                    @*<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 b-t-1">
+                                        <div class="form-group">
+                                            <label for="inputName" class="col-sm-6 control-label text-left l-h p-b-16">Cancel Cheque Image</label>
+                                            <iframe src="~/Content/upload/poupload/PO-21040009.pdf" frameBorder="0" scrolling="auto" height="400" width="300"></iframe>
+                                        </div>
+                                    </div>*@
                                 </div>
                             </div>
                         </div>
-
                         <div class="tab-pane" id="taxinfo">
                             <div class="row">
                                 <div class="col-md-12">
