--- a/Views/Admin/_PartialTopLeftNavBar.cshtml
+++ b/Views/Admin/_PartialTopLeftNavBar.cshtml
@@ -240,9 +240,12 @@
                     <li class='@TempData["POApproved"]'>
                         <a href='@Url.Action("POApproved", "Admin")'><i class="fa fa-code-fork"></i> Approved PO</a>
                     </li>
-                    @*<li class='@TempData["PODetails"]'>
-            <a href='@Url.Action("PODetails", "Admin")'><i class="fa fa-code-fork"></i>  PO Details</a>
-        </li>*@
+                    @*<li class='@TempData["RequestPayment"]'>
+                        <a href='@Url.Action("RequestPayment", "Admin")'><i class="fa fa-code-fork"></i> Request  for Payment</a>
+                    </li>
+                    <li class='@TempData["PaymentProcessing"]'>
+                        <a href='@Url.Action("PaymentProcessing", "Admin")'><i class="fa fa-code-fork"></i>  Payment Processing</a>
+                    </li>*@
                 </ul>
             </li>
             @*<li class='@TempData["Payments"]'>
