--- a/Views/Admin/POAssign.cshtml
+++ b/Views/Admin/POAssign.cshtml
@@ -84,7 +84,7 @@
                                 })
                             </div>
                         </div>
-                        <table id="tblassignpo" class="table table-bordered display nowrap">
+                        <table id="tblassignpo" class="table table-bordered display">
                             <thead>
                                 <tr>
                                     <th><input type="checkbox" id="seallasnpo" /></th>
@@ -121,7 +121,11 @@
                                             <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.POId</a>
                                         </td>
                                         <td>@Html.DisplayFor(modelItem => item.POPId)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Product)</td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Product)<br>
+                                            Brand : @item.Brand<br>
+                                            Model : @item.ModelNo
+                                        </td>
                                         <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
                                         <td>@Html.DisplayFor(modelItem => item.Unit)</td>
                                         <td>@Html.DisplayFor(modelItem => item.Price)</td>
