--- a/Views/Admin/POSourced.cshtml
+++ b/Views/Admin/POSourced.cshtml
@@ -100,7 +100,7 @@
                                 })
                             </div>
                         </div>
-                        <table id="tblposourced" class="table table-bordered display nowrap">
+                        <table id="tblposourced" class="table table-bordered display">
                             <thead>
                                 <tr>
                                     <th><input type="checkbox" id="seallasnpo" /></th>
@@ -138,7 +138,11 @@
                                         <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
                                     </td>
                                     <td>@Html.DisplayFor(modelItem => item.POPId)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Product)</td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Product)<br>
+                                        Brand : @item.Brand<br>
+                                        Model : @item.ModelNo
+                                    </td>
                                     <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Unit)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Price)</td>
