PO Download Error Solve

--- a/Views/Admin/POApproved.cshtml
+++ b/Views/Admin/POApproved.cshtml
@@ -106,7 +106,7 @@
                                             @if (item.Status == "AP")
                                             {
                                                 @Html.EncodedActionLink("Download", "DownloadPO", "Admin",
-                                                    new { id = item.POId }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Edit" })
+                                                    new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Edit" })
                                             }
                                         </td>
                                     </tr>
