--- a/Views/Admin/POSourced.cshtml
+++ b/Views/Admin/POSourced.cshtml
@@ -34,7 +34,7 @@
                 <div class="box">
                     <!-- /.box-body -->
                     <div class="box-body">
-                        <table id="tblposource" class="tbl table table-bordered display nowrap">
+                        <table id="tblposource" class="tbl table table-bordered display">
                             <thead>
                                 <tr>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
